--- a/src/main/resources/assets/mystcraft_ageless/lang/fr_ca.json
+++ b/src/main/resources/assets/mystcraft_ageless/lang/fr_ca.json
@@ -9,6 +9,7 @@
   "item.mystcraft_ageless.descriptive_book": "Livre descriptif",
   "item.mystcraft_ageless.notebook": "Carnet",
   "block.mystcraft_ageless.writing_desk": "Bureau d'écriture",
+  "block.mystcraft_ageless.link_portal": "Portail de linkage",
   "menu.title.mystcraft.linking_book_menu": "Menu de livre de linkage",
   "item.mystcraft_ageless.blue_crystal": "Éclat de cristal bleu",
   "block.mystcraft_ageless.blue_crystal_block": "Bloc de cristal bleu",
